[gd_scene load_steps=13 format=2]

[ext_resource path="res://Weapons/Enemies/NME_Weap_Ranger.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/NME_Base.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/NME_Blobette.gd" type="Script" id=3]
[ext_resource path="res://Components/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Baby frames/frame_09_delay-0.1s.png" type="Texture" id=6]
[ext_resource path="res://Move_Behaviours/Move_RotateOnly.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Attack_Behaviours/Attack_ShootAfterDelay.gd" type="Script" id=9]
[ext_resource path="res://Move_Behaviours/Move_FollowTarget.gd" type="Script" id=10]
[ext_resource path="res://Assets/Baby frames/frame_11_delay-0.1s.png" type="Texture" id=11]
[ext_resource path="res://Assets/Baby frames/frame_08_delay-0.1s.png" type="Texture" id=13]
[ext_resource path="res://Assets/Baby frames/frame_10_delay-0.1s.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[node name="NME_Blobette" instance=ExtResource( 2 )]
script = ExtResource( 3 )
move_state_path = NodePath("Move_FollowTarget")
attack_state_path = NodePath("Attack_ShootAfterDelay")
weapon_path = NodePath("NME_Weap_Ranger")
death_sound = null
attack_duration = 3.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 4 )
animation = "1"
frame = 1
playing = true

[node name="Hitbox" parent="AnimatedSprite" index="0" instance=ExtResource( 4 )]
position = Vector2( -2.33976e-06, -1.44541e-06 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="AnimatedSprite/Hitbox" index="0"]
position = Vector2( 5.05414, 1.4865 )

[node name="Polygon2D" parent="." index="1"]
visible = false
color = Color( 0.709804, 0.439216, 0.576471, 1 )

[node name="Move_FollowTarget" type="Node" parent="." index="3"]
script = ExtResource( 10 )
start_at_max_speed = true
speed = 0
max_speed = 7500
max_speed_randomisation = 1000
target_distance = 600

[node name="Move_RotateOnly" type="Node" parent="." index="4"]
script = ExtResource( 8 )
speed = 0
max_speed = 0
max_rotation_speed = 0

[node name="Attack_ShootAfterDelay" type="Node" parent="." index="5"]
script = ExtResource( 9 )
trigger_duration = 8.0
delay = 0.1

[node name="NME_Weap_Ranger" parent="." index="6" instance=ExtResource( 1 )]
time_between_shots = 10.0
accuracy = 20.0

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 6.0

[node name="Health" parent="." index="9"]
max_health = 1

[node name="Light2D" parent="." index="10"]
position = Vector2( -8, -4 )
color = Color( 1.5, 0.12, 0.4, 1 )

[connection signal="body_entered" from="AnimatedSprite/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="target_distance_reached" from="Move_FollowTarget" to="." method="_on_Move_FollowTarget_target_distance_reached"]

[editable path="AnimatedSprite/Hitbox"]
[editable path="Hitbox"]
